--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
 
-      <a href="main/index.html"><h4><button class="w-btn-neon2" type="button">Go to site Gyuha Lee.</button></h4></a>
+      <a href="#"><h4><button class="w-btn-neon2" type="button">Go to site Gyuha Lee.</button></h4></a>
 
   </header><!-- End #header -->
 
