--- a/main/index.html
+++ b/main/index.html
@@ -747,7 +747,7 @@
   </section><!-- End Contact Section -->
 
   <div class="credits">
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    Designed by Gyuha Lee<br>36.62531088184995, 127.45814381816591<br><a>leejune30@chungbuk.ac.kr</a>
   </div>
 
   <!-- Vendor JS Files -->
