--- a/main/index.html
+++ b/main/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Gyuha Lee</title>
+  <title>Gyuha Lee.</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -51,7 +51,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Gyuha Lee</h1>
+      <h1>Gyuha Lee.</h1>
       <p>I'm <span class="typed" data-typed-items="Student., Developer., Traveler., Soldier."></span></p>
       <div class="social-links">
 	      <a href="https://github.com/gyuha-wa-vect0r" class="github"><i class="bx bxl-github"></i></a>
@@ -442,7 +442,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Gyuha Lee</h3>
+      <h3>Gyuha Lee.</h3>
       <p>I'm younger today than tomorrow.</p>
       <div class="social-links">
 		  <a href="https://github.com/gyuha-wa-vect0r" class="github"><i class="bx bxl-github"></i></a>
